--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,39 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header class="container">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-info">
+        <%= link_to "CBU ACM", root_path, class: "navbar-brand" %>
+        <div class="collapse navbar-collapse" id="navbarColor01">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <%= link_to "About Us", about_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Officers", officers_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "WorkShops", root_path, class: "nav-link" %>
+            </li>
+          </ul>
+          <% if logged_in? %>
+            <%= current_user.username %>
+            <%= link_to "Sign Out", logout_path, class: "btn btn-link text-secondary"%>
+          <% else %>
+            <%= link_to "Login", login_path, class: "btn btn-secondary my-2 my-sm-0"%>
+          <%end%>
+       </div>
+      </nav>
+    </header>
+
+    <section class="container">
+      <div id="flash">
+        <% flash.each do |key, value| %>
+        <div class="flash alert <%= alert_class(key) %>"><%= value %></div> 
+        <% end %>
+      </div>
+      
+      <%= yield %>
+    </section>
   </body>
 </html>
