--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,17 +12,17 @@
   <body>
     <header class="container">
       <nav class="navbar navbar-expand-lg navbar-dark bg-info">
-        <%= link_to "CBU ACM", root_path, class: "navbar-brand" %>
+        <%= link_to "Main Link", root_path, class: "navbar-brand" %>
         <div class="collapse navbar-collapse" id="navbarColor01">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <%= link_to "About Us", root_path, class: "nav-link" %>
+              <%= link_to "SubLink 1", root_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
-              <%= link_to "Officers", root_path, class: "nav-link" %>
+              <%= link_to "Sublink 2", root_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
-              <%= link_to "WorkShops", root_path, class: "nav-link" %>
+              <%= link_to "Sublink 3", root_path, class: "nav-link" %>
             </li>
           </ul>
        </div>
