--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,33 +10,6 @@
   </head>
 
   <body>
-    <header class="container">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-info">
-        <%= link_to "Main Link", root_path, class: "navbar-brand" %>
-        <div class="collapse navbar-collapse" id="navbarColor01">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <%= link_to "SubLink 1", root_path, class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Sublink 2", root_path, class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Sublink 3", root_path, class: "nav-link" %>
-            </li>
-          </ul>
-       </div>
-      </nav>
-    </header>
-
-    <section class="container">
-      <div id="flash">
-        <% flash.each do |key, value| %>
-        <div class="flash alert <%= alert_class(key) %>"><%= value %></div> 
-        <% end %>
-      </div>
-      
-      <%= yield %>
-    </section>
+    <h1>Hello</h1>
   </body>
 </html>
