--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,12 +1,12 @@
 <h1>Add Post</h1>
 <% form_for :post, url: posts_path do |f| %>
 	<p>
-		<%= f.label 'Title' %><br>
+		<%= f.label 'Title' %><br />
 		<%= f.text_field :title %>
 	</p>
 
 	<p>
-		<%= f.label 'Body' %><br>
+		<%= f.label 'Body' %><br />
 		<%= f.text_area :body %>
 	</p>
 
